hphp/test/slow/include-error3.php.expectf

Fatal error: require_once(non-existing-file.php): File not found in %s/include-error3.php on line 5
